maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:3: error: ';' expected but '(' found.
  var a:List(Int,Int) = Nil; 
            ^ShortestPathMaze:30: error: ')' expected but '(' found.
def listVoisins(listCoord:List(Int,Int), xMax:Int, yMax:Int, num:Int):List(Int,Int) = {
                              ^ShortestPathMaze:30: error: '=' expected but ',' found.
def listVoisins(listCoord:List(Int,Int), xMax:Int, yMax:Int, num:Int):List(Int,Int) = {
                                       ^ShortestPathMaze:89: error: illegal start of simple expression
}
^